update: JobabaApiController endpoint, testcode